[package]
authors = ["Judge Maygarden <jmaygarden@gmail.com>"]
description = "Serial line CAN bus (slcan) interface"
documentation = "https://docs.rs/slcan"
edition = "2018"
homepage = "https://github.com/jmaygarden/slcan"
keywords = ["can", "slcan"]
license = "MIT"
name = "slcan"
readme = "README.md"
repository = "https://github.com/jmaygarden/slcan.git"
version = "0.1.4"

[dependencies]
serial-core = "0.4"

[dev-dependencies]
serial = "0.4"
