[package]
authors = ["Judge Maygarden <jmaygarden@gmail.com>"]
description = "Serial line CAN bus (slcan) interface"
documentation = "https://docs.rs/slcan"
edition = "2018"
homepage = "https://github.com/jmaygarden/slcan"
keywords = ["can", "slcan"]
license = "MIT"
name = "slcan"
readme = "README.md"
repository = "https://github.com/jmaygarden/slcan.git"
version = "0.1.3"

[dependencies]
embedded-can = { version = "0.3", optional = true }
nb = { version = "1.0", optional = true }
serial-core = "0.4"

[dev-dependencies]
serial = "0.4"

[features]
default = []
embedded-can-impl = ["embedded-can", "nb"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
